# SocialNet

./: README.md
backend/: README.md  db.sqlite3  pyproject.toml
backend/chat/: apps.py  consumers.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/friends/: admin.py  models.py  serializers.py  urls.py  views.py
backend/friends/migrations/: 0001_initial.py
backend/notifications/: consumers.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/notifications/migrations/: 0001_initial.py  0002_rename_recipient_notification_receiver_and_more.py
backend/posts/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/posts/migrations/: 0001_initial.py
backend/social_network/: asgi.py  routing.py  settings.py  urls.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_profile_user.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: BottomBar.jsx  ChatButton.jsx  ChatWindow.jsx  ConfirmModal.jsx  FriendRequestItem.jsx  FriendRequestList.jsx  Messenger.jsx  Navbar.jsx  NeuButton.jsx  PageLoader.jsx  PostCard.jsx  PostModal.jsx
frontend/src/components/profile/: EditProfileForm.jsx  (+6 more)
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Feed.jsx  Friends.jsx  Login.jsx  NotFound.jsx  NotificationsPage.jsx  Profile.jsx  Register.jsx
frontend/src/services/: api.js  chat.js
frontend/src/utils/: smoothScroll.js
